# pavimentados-api-serverless

./: .gitignore  README.md  environment.yml  pyproject.toml  pytest.ini  query.txt  samconfig.toml  template.yaml
.github/workflows/: gh-pages.yml
deployment/core/: samconfig.toml  template.yaml
events/: dataset-get.json  dataset-list.json  dataset-signed-url.json
postman/: Pavimentados-Tasks.postman_collection.json
scripts/: compress_sm_code.py
src/apigateway/: api-definition.yaml
src/ecr/road-section-inference-cpu/: Dockerfile
src/ecr/road-section-inference-gpu/: Dockerfile
src/lambda/build-payload/: inference_builder.py  input_file.py  lambda_function.py
src/lambda/dataset-microservice/: app.py  aws_resources.py  requirements.txt  serializers.py
src/lambda/dataset-microservice/controllers/: admin_dataset_controller.py  dataset_controller.py
src/lambda/dataset-microservice/infra_commons/: __init__.py  aws_resources.py  serializers.py  utils.py
src/lambda/dataset-microservice/models.py/: dataset.py
src/lambda/discover-outputs/: lambda_function.py  requirements.txt
src/lambda/task-microservice/: app.py  aws_resources.py  requirements.txt  serializers.py  task_controller.py
src/stepfunctions/: InferenceResponseWorkflow.yaml  RoadSectionInferenceWorkflow.yaml
tests/: conftest.py  mocks.py  requirements.txt
tests/functional/: conftest.py  test_build_sagemaker_payload.py  test_dataset_acceptance.py  test_task_acceptance.py
tests/mocks/: dataset_microservice.py  task_microservice.py
tests/unit/: test_task_model.py  test_task_service.py
(+35 files in other folders)
