[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datalab"
dynamic = ["version"]
description = "An Python exampe package from the World Bank Data Lab"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["world bank", "template", "reproducible research"]
authors = [
  {name="World Bank Development Data Group", email="datalab@worldbank.org"},
]
maintainers = [
  {name="Gabriel Stefanini Vicente", email="gvicente@worldbank.org"},
]
classifiers = [
    "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3 :: Only",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
	"requests>=2.32.0",
    "pycountry>=24.6.1",
]
[project.optional-dependencies]
notebook = ["notebook>=7.2.0"]

[project.urls]
"Homepage" = "https://github.com/worldbank/template"
"Bug Reports" = "https://github.com/worldbank/template/issues"
"Source" = "https://github.com/worldbank/template"

[tool.setuptools.dynamic]
version = {attr = "datalab.__version__"}